# apc_module

./: .dockerignore  .env  .gitignore  README.md  docker-compose.yml  dockerfile.base  dockerfile.dev  dockerfile.prod  pyproject.toml
src/apc_module/: main.py
src/apc_module/container/: modele_container.py
src/apc_module/controller/: module_manage_controller.py
src/apc_module/dto/kafka/consumer/: apc_data_dto.py  change_apc_data_dto.py
src/apc_module/dto/kafka/producer/: apc_event_dto.py
src/apc_module/dto/module_manage/: request_module_manage_dto.py  response_module_mange_dto.py  rule_line_dto.py  rule_line_points_dto.py
src/apc_module/dto/module_manage/request/: request_put_rule_line_dto.py
src/apc_module/module/: apc_module.py  socket_client.py  tracking.py
src/apc_module/service/: kafka_consumer.py  kafka_service.py  module_manage_service.py
